chamber/styles/small.css
/* ... */
:root {
    --primary-color: #6FA2DC;
    --secondary-color: #495850;
    --font-color: #000000;    
    --accent-color: #281E15;
    --background-color: #f4f4f4;
    --accent2: #884b2e;
}
body {
    font-family: 'Roboto', sans-serif; /* Updated font family */
    min-width: 320px; /* Ensures readability on small devices */
    background-color: var(--background-color);
    color: var(--font-color);
    overflow-x: hidden;
}

/* ******************Header Styles********************* */
header {
    background-color: var(--primary-color);
    color: white;
    padding: 0.5rem;
    display: grid;
    grid-template-columns: auto 44px 44px;
}
.logo-box {
    grid-column: span 1;
    justify-self: start;
    display: flex;
    align-items: center;
    justify-content: center;
}
.logo-box h1 {
    font-size: 1rem;
    margin-left: 0.5rem;
    font-weight: 700;
}
.logo-box img {
    height: 100px;
    width: 100px;
}


/* ***************Hamburger Navigation Styles*************** */
.show {
    display: block;
}

#ham-btn {
    background: none;
    /* button element default had a grayish background, so we removed it */
    border: none;
    /* button element default had a border, so we removed it */
    color: var(--secondary);
    /* Dark blue color for the hamburger icon */
    cursor: pointer;
    /* Cursor changes to pointer on hover to indicate its clickable */
    font-size: 2rem;
    /* Larger size for visibility */
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    /* Font family for the icon */
    transition: all 0.3s ease-in-out;
    /* Smooth transition for hover effects */
    grid-column: 3/4
}

#ham-btn:before {
    content: "\2630";
    /* hamburger for open menu*/
}

#ham-btn:hover {
    scale: 1.3;
    /* Slightly enlarge the hamburger icon on hover for better interactivity */
    transition: all 0.1s ease-in-out;
}

#ham-btn.show::before {
    content: "\00D7";
    /* X for close menu */
}


/* ***************Navigation Menu Styles*************** */

nav {
    display: none;
    width: 100%;
    /* Full width for navigation menu */
    grid-column: span 3;
    border-top: 1px solid #ddd;
    background-color: var(--primary-color);
}

#nav-bar {
    list-style: none;
    /* Remove default bullet points from list */
}
#nav-bar li {
    border-radius: 8px;
}
#nav-bar a {
    display: block;
    /* Make links take up full width for easier clicking */
    padding: .8rem 10px;
    /* Padding around links for better spacing */
    text-decoration: none;
    /* Remove underline from links */
    color: white;
    /* White link color */
    /* Light grey border below each link */
    transition: all 0.3s ease-in-out;
}

#nav-bar li.current {
    background-color: var(--accent-color);
    /* Highlight current page link with light gray background */
    color: white;
    /* White text for better contrast */
}

#nav-bar li.current a {
    color: white;
    /* White text for better contrast */
}

#nav-bar li:hover {
    border-radius: 8px;
    box-shadow: 0 0 5px var(--accent2);
    scale: 1.02;
    /* Dark blue background on hover for better interactivity */
    transition: all 0.1s ease-in-out;
}

/* **************** Main Styles **************** */
main {
    min-height: calc(100vh - 116px - 50.39px - 16px - 27.59px - 16px);
    margin: 1rem;
}

.hero-container {
    text-align: center;
    position: relative;
    width: 100%;
}
.hero-container img {
    width: 100%;
    height: auto;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}
.welcome-box {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); /* Center the box */
    background-color: rgba(44, 62, 80, 0.7); /* Semi-transparent background.  */
    color: white;
    padding: 1rem 2rem;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    min-height: 50%;
    width: 80%;
    transition: all 0.3s ease-in-out;
}
.welcome-box h2 {
    font-size: 1.3rem;
    margin-bottom: 0.5rem;
    color: var(--secondary-color)
}
.welcome-box p {
    font-size: 0.8rem;
    line-height: 1.2;
    padding: 0.5rem;
    font-weight: 500;
}
.welcome-box a {
    color: var(--accent2);
    text-decoration: underline;
    transition: all 0.3s ease-in-out;
}
.welcome-box a:hover {
    color: white;
    transition: all 0.1s ease-in-out;
    scale: 1.1;
}
.welcome-box:hover {
    box-shadow: 0 0 0.5rem black;
    transition: all 0.1s ease-in-out;
    scale: 1.01;
}

.mesa-info {
    display: grid;
    grid-template-columns: 1fr;
    gap: 1rem;
}
.mesa-info section {
    background-color: white;
    border-radius: 8px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    min-height: 250px;
    border: solid 1px #ddd;
}
.mesa-info section h3 {
    font-size: 1.2rem;
    color: var(--primary-color);
    background-color: var(--accent2);
    width: 100%;
    height: fit-content;
    padding: 0.5rem;
    border-radius: 8px 8px 0 0;
}
.events-box ul {
    list-style: none;
    padding: 1rem;
    line-height: 1.5;
}
.events-box li::before {
    content: "🗓️";
    display: inline-block;
    width: 1em;
    margin-right: 0.5em;
}
.current-weather-box {
    display: grid;
    grid-template-columns: 1fr 2fr;
}
.current-weather-box h3 {
    grid-column: span 2;
    grid-row: 1;
}
#weather-icon {
    grid-column: span 1;
    grid-row: 2;
    justify-self: center;
    padding-top: 1rem;
}
#weather-today {
    grid-column: span 1;
    grid-row: 2;
    justify-self: start;
    padding: 1rem;
    line-height: 1.3;
}
.forecast-box {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
}
.forecast-box h3 {
    grid-column: span 3;
}
.forecast-day {
    background-color: #ddd;
    border-radius: 8px;
    padding: 1rem;
    margin: 1rem;
    text-align: center;
}
hr {
    width: 100vw;
    margin: 1rem calc(-50vw + 50%);
    border: 1px solid #ddd;
    border-top: 1px solid #00000031;
    box-shadow: #18bc9c 0px 2px 4px;
}
.spotlight-container {
    margin-top: 1rem;
    margin-bottom: 1rem;
    text-align: center;
}
/* ... */

